--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,13 @@
 
   "name": "iPlayer IMDB film ratings",
   "description": "Displays the IMDB rating for films on iPlayer along with a link to their page on IMDB.",
-  "version": "1.21",
+  "version": "1.22",
   "icons": { "16": "icon16.png",
              "48": "icon48.png",
              "128": "icon128.png" },
   "content_scripts": [
     {
-      "matches": ["http://www.bbc.co.uk/iplayer/*"],
+      "matches": ["http://www.bbc.co.uk/iplayer/categories/films*"],
       "js": ["jquery-2.0.0.min.js", "iplayerimdb.js"]
     }
   ],
